--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="form-group">
             <label>Пароль:</label>
-            <input type="password" id="password" placeholder="cityslicka" value="cityslicka">
+            <input type="password" id="password" placeholder="cityslicka">
         </div>
         <button onclick="login()">Войти</button>
         <p id="error" style="color: red;"></p>
